--- a/public/css/login.css
+++ b/public/css/login.css
@@ -28,3 +28,14 @@
 .ant-tabs-tab:focus-visible {
   outline-color: blue;
 }
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
